fix overflow html

--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -24,7 +24,7 @@
 }
 
 .contentLink{
-    margin-top: -100px;
+   // margin-top: 100px;
     margin-bottom: 300px;
     margin-left: 500px;    
   // margin-right: -100px;
@@ -188,6 +188,7 @@
 
   
   //////////////////////schede di presentazione////////////////////////
+  /// /*
   .contentPresentationGlobal{
    display: flex;   
    flex-wrap: wrap;
